<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/iteRed" android:title="@string/reb"></item>
    <item android:id="@+id/iteBlue" android:title="@string/blue"></item>
    <item android:id="@+id/iteGreen" android:title="@string/green"></item>
    <item android:id="@+id/iteYellow" android:title="@string/yellow"></item>
    <item android:id="@+id/iteSemitransparent" android:title="@string/semiTransparent"></item>
    <item android:id="@+id/iteTransparent" android:title="@string/Transparent"></item>
    <item android:id="@+id/iteMagenta" android:title="@string/Magenta"></item>
    <item android:id="@+id/iteCyan" android:title="@string/Cyan"></item>
    <item android:id="@+id/iteBrown" android:title="@string/brown"></item>
    <item android:id="@+id/iteBlack" android:title="@string/black"></item>
    <item android:id="@+id/iteAlpha" android:title="@string/alpha"></item>
</menu>